# pyrt

./: .gitignore  INSTALL  INSTALL.md  MANIFEST.in  NAMING_CONVENTION.md  README.md  airmass.py  atlas.c  cat2det.py  catalog.py  catalogs.py  combine-images  config.py  data_handling.py  dophot-usage.md  dophot3.py  ecsv_target.py  file_utils.py  filter-estimation.md  filter_matching.py  fotfit.py  gaia-bright-stars.py  get_ecsv.sh  mProjectPX  mProjectPX.py  match_stars.py  mkcat.sh  phcat.py  plot_stars.gp  plotting.py  pyproject.toml  pyrt.sh  refit_astrometry.py  requirements.txt  sky2xy  stepwise_regression.py  termfit.py  terms-explained.md  tr-utils.py  transients.py  (+3 more)
atlas/: Makefile  README.md  atlas.c
docs/: SZP-todo.md  catalog.md  dophot-usage.md  filter-estimation.md  terms-explained.md
pipeline/: get_ecsv.py
pyrt/: __init__.py
pyrt/catalog/: __init__.py  catalog.py
pyrt/cli/: __init__.py  astrometry.py  cat2det.py  combine.py  cphead.py  dophot.py  ecsv_target.py  edhead  edhead.py  f2cj.py  field_solve.py  fits_overlap.py  galaxy_phcat.py  mProjectPX.py  phcat.py  ps1mosaic.py  zpn_to_tan.py
pyrt/core/: __init__.py  data_handling.py  error_model.py  fotfit.py  match_stars.py  refit_astrometry.py  stepwise_regression.py  termfit.py  zpnfit.py
pyrt/utils/: __init__.py  astrometry.py  dms.py  dophot_config.py  file_utils.py  filter_matching.py  plotting.py
