[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrt"
version = "0.1.0"
description = "Photometric Reduction Tool - A powerful package for astronomical photometric calibration and astrometric refinement"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}  # Update if you have a different license
authors = [
    {name = "Martin Jelínek", email = "martin.jelinek@asu.cas.cz"},
]
maintainers = [
    {name = "Martin Jelínek", email = "martin.jelinek@asu.cas.cz"},
]
keywords = [
    "astronomy",
    "photometry",
    "astrometry",
    "calibration",
    "fits",
    "wcs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "astropy>=5.0",
    "matplotlib>=3.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyrt"  # Update with actual URL
Documentation = "https://github.com/yourusername/pyrt#readme"
Repository = "https://github.com/yourusername/pyrt"
Issues = "https://github.com/yourusername/pyrt/issues"

[project.scripts]
# Main photometric calibration and astrometric refinement
pyrt-dophot = "pyrt.cli.dophot:main"

# Source extraction and detection table preparation
pyrt-phcat = "pyrt.cli.phcat:main"
pyrt-cat2det = "pyrt.cli.cat2det:main"

# Astrometric utilities
pyrt-zpn-to-tan = "pyrt.cli.zpn_to_tan:main"
pyrt-mproject = "pyrt.cli.mProjectPX:main"

# FITS utilities
pyrt-ecsv-target = "pyrt.cli.ecsv_target:main"
pyrt-fits-overlap = "pyrt.cli.fits_overlap:main"
pyrt-f2cj = "pyrt.cli.f2cj:main"

# General purpose tools
pyrt-combine-images = "pyrt.cli.combine:main"
pyrt-cphead = "pyrt.cli.cphead:main"
pyrt-edhead = "pyrt.cli.edhead:main"
pyrt-sky2xy = "pyrt.cli.sky2xy:main"

[tool.setuptools]
packages = [
    "pyrt",
    "pyrt.core",
    "pyrt.catalog",
    "pyrt.utils",
    "pyrt.cli",
]

[tool.setuptools.package-data]
pyrt = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
